# pySigma-backend-crowdstrike

./: .git-blame-ignore-revs  Copyright  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/crowdstrike/: __init__.py  crowdstrike.py  logscale.py
sigma/pipelines/crowdstrike/: __init__.py  crowdstrike.py  crowdstrike_falcon.py  crowdstrike_fdr.py
tests/: test_backend_logscale.py  test_processing_pipelines.py  test_processing_pipelines_crowdstrike.py  test_processing_pipelines_falcon.py  test_processing_pipelines_fdr.py
