[tool.poetry]
name = "pysigma-backend-crowdstrike"
version = "2.1.0rc1"
description = "pySigma CrowdStrike Logscale backend and processing pipelines for the Falcon data model."
readme = "README.md"
authors = ["Panos Moullotos", "Thomas Patzke <thomas@patzke.org>"]
license = "LGPL-2.1-only"
repository = "https://github.com/SigmaHQ/pySigma-backend-crowdstrike"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.9"
pysigma = "1.0.0rc1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mypy = "^0.10.3"
pylint = "^3.2.7"
rope = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
